Fix minor layout issues

--- a/css/layout/_contact.scss
+++ b/css/layout/_contact.scss
@@ -1,7 +1,7 @@
 #main_contact {
 	.container {
 		padding-bottom: 15px;
-		margin: 50px auto;
+		margin: 0 auto 50px;
 	}
 	.profile {
 		@extend %flex-center;
