--- a/css/main.scss
+++ b/css/main.scss
@@ -39,8 +39,7 @@ body  {
 
 .tag {
 	color: #777;
-  margin: 10px 0;
-  padding: 10px 10px 10px 50px;
+  margin: 20px 0;
   font-size: 2em;
   font-family: monospace;
 }
